Updates on the documentation
