# super_admin_1/shop/routes.py
@@ -885,209 +885,6 @@ Examples:
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# @shop.route("/temporarily-deleted-vendors", methods=["GET"])
-# @admin_required(request=request)
-# def get_temporarily_deleted_vendors(user_id):
-#     """
-#     Retrieve temporarily deleted vendors.
-
-#     This endpoint allows super admin users to retrieve a list of vendors who have been temporarily deleted.
-
-#     Returns:
-#         JSON response with status and message:
-#         - Success (HTTP 200): A list of temporarily deleted vendors and their details.
-#         - Success (HTTP 200): A message indicating that no vendors have been temporarily deleted.
-#         - Error (HTTP 500): If an error occurs during the retrieving process.
-
-#     Permissions:
-#         - Only accessible to super admin users.
-
-#     Note:
-#         - The list includes the details of vendors who have been temporarily deleted.
-#         - If no vendors have been temporarily deleted, a success message is returned.
-#     """
-#     try:
-#         # Query the database for all temporarily_deleted_vendors
-#         temporarily_deleted_vendors = Shop.query.filter_by(
-#             is_deleted="temporary").all()
-
-#         # Calculate the total count of temporarily deleted vendors
-#         total_count = len(temporarily_deleted_vendors)
-
-#         # Check if no vendors have been temporarily deleted
-#         if not temporarily_deleted_vendors:
-#             return jsonify(
-#                 {
-#                     "message": "No vendors have been temporarily deleted",
-#                     "data": total_count,
-#                 }
-#             ), 200
-
-#         # Create a list with vendors details
-#         vendors_list = [vendor.format()
-#                         for vendor in temporarily_deleted_vendors]
-
-#         # Return the list with all attributes of the temporarily_deleted_vendors
-#         return jsonify(
-#             {
-#                 "message": "All temporarily deleted vendors retrieved successfully",
-#                 "data": {
-#                     "temporarily_deleted_vendors": vendors_list,
-#                     "count": total_count,
-#                 }
-#             }
-#         ), 200
-#     except Exception as e:
-#         # Handle any exceptions that may occur during the retrieving process
-#         return jsonify({"status": "Error", "message": str(e)})
-
-
-# # Define a route to get details of a temporarily deleted vendor based on his/her ID
-# @shop.route("/temporarily-deleted-vendor/<string:vendor_id>",  methods=["GET"])
-# # WORKS - Documented
-# @admin_required(request=request)
-# def get_temporarily_deleted_vendor(user_id, vendor_id):
-#     """
-#     Retrieve details of a temporarily deleted vendor based on its ID.
-
-#     Args:
-#         vendor_id (string): The unique identifier of the vendor to retrieve.
-
-#     Returns:
-#         JSON response with status and message:
-#         - Success (HTTP 200): Details of the temporarily deleted vendor.
-#         - Error (HTTP 404): If the vendor with the provided ID is not found or not temporarily deleted.
-#         - Error (HTTP 500): If an error occurs during the retrieval process.
-
-#     Permissions:
-#         - Only accessible to super admin users.
-
-#     Note:
-#         - This endpoint allows super admin users to retrieve the details of a temporarily deleted vendor based on his/her ID.
-#     """
-#     try:
-#         try:
-#             vendor_id = IdSchema(id=vendor_id)
-#             vendor_id = vendor_id.id
-#         except ValidationError as e:
-#             raise_validation_error(e)
-
-#         # Query the database for the vendor with the provided vendor_id that is temporarily deleted
-#         temporarily_deleted_vendor = Shop.query.filter_by(
-#             id=vendor_id, is_deleted="temporary"
-#         ).first()
-
-#         # If the vendor with the provided ID doesn't exist or is not temporarily deleted, return a 404 error
-#         if not temporarily_deleted_vendor:
-#             return jsonify(
-#                 {
-#                     "Error": " Not Found",
-#                     "message": "vendor not found.",
-#                 }
-#             ),  404
-
-#         # Return the details of the temporarily deleted vendor
-#         vendor_details = temporarily_deleted_vendor.format()
-
-#         return jsonify(
-#             {
-#                 "message": "Temporarily deleted vendor details retrieved successfully",
-#                 "data": vendor_details,
-#             }
-#         ), 200
-
-#     except SQLAlchemyError as e:
-#         # Handle any exceptions that may occur during the retrieval process
-#         db.session.rollback()
-#         return jsonify({"status": "Error", "message": str(e)}), 500
-
-
-# # WORKS - Documented
-# @shop.route("/sanctioned", methods=["GET"])
-# @admin_required(request=request)
-# def sanctioned_shop(user_id):
-#     """
-#     Get all sanctioned products from the database.
-
-#     Args:
-#       None
-
-#     Returns:
-#       A JSON response containing a message and a list of dictionary objects representing the sanctioned shop.
-#       If no shop are found, the message will indicate that and the object will be set to None.
-#     """
-#     data = []
-#     # get all the product object, filter by is_delete = temporay and rue and admin_status = "suspended"
-#     query = Shop.query.filter(
-#         Shop.admin_status == "suspended",
-#     ).all()
-
-#     # if the query is empty
-#     if not query:
-#         return jsonify({
-#             "error": "Not Found",
-#             "message": "No shops found",
-#         }), 404
-
-#     # populate the object to a list of dictionary object
-#     for obj in query:
-#         data.append(obj.format())
-#     return jsonify({
-#         "message": "All sanctioned shops",
-#         "object": data
-#     }), 200
-
-
-
 @shop.route("/all/filters", methods=["GET"])
 @admin_required(request=request)
 def filters(user_id: uuid.UUID) -> List[Dict[str, str]]:
